Fixed layout issue when no area is selected

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -118,7 +118,7 @@
             align-items: center;
             display: flex;
             justify-content: center;
-            min-height: 460px;
+            min-height: 440px;
             text-align: center;
             vertical-align: middle;
           }
